testsuite/tests/quotes/T10384.stderr
T10384.hs:3:37: error: [GHC-28914]
    • Level error: ‘y’ is bound at level 0 but used at level 1
    • Could not be resolved by implicit lifting due to the following error:
        No instance for: ‘GHC.Internal.TH.Lift.Lift (a0 -> a0)’
    • In the typed Template Haskell splice: y
      In the Template Haskell typed quotation: [|| y ||]
      In the expression: [|| y ||]

